<resources>
    <string name="app_name">Task Timer App</string>
    <string name="make_your_life_more_n_organized">Make your Life More \nOrganized</string>
    <string name="get_started">GET STARTED</string>
    <string name="add_new_task">Add New task</string>
    <string name="tasks">Tasks</string>
    <string name="all_tasks">All tasks</string>
    <string name="task_descriptions">Task Descriptions</string>
    <string name="task_title">Task Title</string>
    <string name="add_task">Add Task</string>
    <string name="_00_00">00:00</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="preference_file_key">com.example.tasktimerapp.PREFERENCE_FILE_KEY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statement1">Reach your goals faster with Lifetrack</string>
    <string name="statement2">Get that satisfying feeling when marking them done</string>
    <string name="statement3">Save time and be productive by creating daily tasks</string>
    <string name="update_task">Update task</string>
    <string name="time_taken_00_00">Time Taken = 00:00</string>
    <string name="reset">Reset</string>
    <string name="delete_the_task">Delete the task?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="task_card">Task Card</string>
    <string name="no_tasks">No Tasks</string>
</resources>