<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UpdateTaskActivity">

    <View
        android:id="@+id/gradient_header"
        android:layout_width="match_parent"
        android:layout_height="85sp"
        android:background="@drawable/gradient_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="@+id/gradient_header"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/task_title_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:inputType="text"
            android:background="@drawable/button_white"
            android:hint="@string/task_title"
            android:padding="10dp" />

        <EditText
            android:id="@+id/task_description_et"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_white"
            android:gravity="top"
            android:hint="@string/task_descriptions"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/task_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_taken_00_00"
                android:layout_marginEnd="10sp"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/reset"
                android:textColor="@color/purple"
                android:textSize="24sp"/>
        </LinearLayout>



        <Button
            android:id="@+id/update_task_button"
            android:layout_width="356dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/gradient_corner"
            android:padding="10dp"
            android:text="@string/update_task"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>