<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@color/white"
    android:padding="10dp">

    <ImageView
        android:id="@+id/close_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:src="@drawable/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/alert"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:src="@drawable/question_mark"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/success_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/delete_the_task"
            android:textSize="26sp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="80sp"
                android:layout_height="40sp"
                android:layout_marginEnd="30sp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:background="@color/gray_light"/>
            <Button
                android:id="@+id/yes_button"
                android:layout_width="80sp"
                android:layout_height="40sp"
                android:text="@string/yes"
                android:layout_marginStart="30sp"
                android:textColor="@color/white"
                android:background="@drawable/gradient_background"/>
        </LinearLayout>



    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>